<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.CartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5A1ACC"
        app:title="@string/cart"
        app:titleTextColor="@color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/cart_empty"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lvCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:gravity="center">

        <TextView
            android:id="@+id/txtToTalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtValuePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gia tri"
            android:textColor="#FF0000"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPayment"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#1AAA20"
        android:text="@string/pay" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinueBuy"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#1AAA20"
        android:text="@string/continue_buy" />

</LinearLayout>